修改用户为 super

--- a/config/supervisor/conf.d/nginx.conf
+++ b/config/supervisor/conf.d/nginx.conf
@@ -12,7 +12,7 @@ startretries=2
 exitcodes=0,2
 stopsignal=TERM
 stopwaitsecs=10
-user=worker
+user=super
 redirect_stderr=true
 stdout_logfile=NONE
 redirect_stdout=true
