--- a/config/supervisor/conf.d/redis.conf
+++ b/config/supervisor/conf.d/redis.conf
@@ -12,7 +12,7 @@ startretries=2
 exitcodes=0,2
 stopsignal=TERM
 stopwaitsecs=10
-user=worker
+user=super
 redirect_stderr=true
 stdout_logfile=NONE
 redirect_stdout=true
@@ -32,7 +32,7 @@ startretries=2
 exitcodes=0,2
 stopsignal=TERM
 stopwaitsecs=10
-user=worker
+user=super
 redirect_stderr=true
 stdout_logfile=NONE
 redirect_stdout=true
@@ -52,7 +52,7 @@ startretries=2
 exitcodes=0,2
 stopsignal=TERM
 stopwaitsecs=10
-user=worker
+user=super
 redirect_stderr=true
 stdout_logfile=NONE
 redirect_stdout=true
@@ -72,7 +72,7 @@ startretries=2
 exitcodes=0,2
 stopsignal=TERM
 stopwaitsecs=10
-user=worker
+user=super
 redirect_stderr=true
 stdout_logfile=NONE
 redirect_stdout=true
@@ -92,7 +92,7 @@ startretries=2
 exitcodes=0,2
 stopsignal=TERM
 stopwaitsecs=10
-user=worker
+user=super
 redirect_stderr=true
 stdout_logfile=NONE
 redirect_stdout=true
@@ -112,7 +112,7 @@ startretries=2
 exitcodes=0,2
 stopsignal=TERM
 stopwaitsecs=10
-user=worker
+user=super
 redirect_stderr=true
 stdout_logfile=NONE
 redirect_stdout=true
