1修改用户为 super

--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -9,7 +9,7 @@ nodaemon = true
 minfds = 1024
 minprocs = 200
 umask = 022
-user = worker
+user = super
 identifier = supervisor
 directory = /vue-msf/supervisor/
 nocleanup = true
