--- a/config/nginx/conf.d/apidoc.conf
+++ b/config/nginx/conf.d/apidoc.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  localhost;
+    server_name  api.com;
 
     access_log  /vue-msf/data/nginx/logs/localhost.access.log  main;
     error_log   /vue-msf/data/nginx/logs/localhost.error.log;
