--- a/config/supervisor/conf.d/nginx.conf
+++ b/config/supervisor/conf.d/nginx.conf
@@ -1,19 +1,19 @@
-[program:nginx]
-command=/vue-msf/nginx/sbin/nginx
-process_name=nginx
-numprocs=1
-directory=/vue-msf/nginx/
-umask=022
-priority=999
-autostart=true
-autorestart=true
-startsecs=10
-startretries=2
-exitcodes=0,2
-stopsignal=TERM
-stopwaitsecs=10
-user=super
-redirect_stderr=true
-stdout_logfile=NONE
-redirect_stdout=true
-stderr_logfile=NONE
+#[program:nginx]
+#command=/vue-msf/nginx/sbin/nginx
+#process_name=nginx
+#numprocs=1
+#directory=/vue-msf/nginx/
+#umask=022
+#priority=999
+#autostart=true
+#autorestart=true
+#startsecs=10
+#startretries=2
+#exitcodes=0,2
+#stopsignal=TERM
+#stopwaitsecs=10
+#user=super
+#redirect_stderr=true
+#stdout_logfile=NONE
+#redirect_stdout=true
+#stderr_logfile=NONE
