关闭 nginx 守护进程

--- a/config/nginx/conf/nginx.conf
+++ b/config/nginx/conf/nginx.conf
@@ -1,6 +1,6 @@
-
 user  super;
 worker_processes  1;
+daemon off;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
@@ -62,13 +62,20 @@ http {
 
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
         #
-        #location ~ \.php$ {
+        location ~ \.php$ {
         #    root           html;
         #    fastcgi_pass   127.0.0.1:9000;
         #    fastcgi_index  index.php;
         #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
         #    include        fastcgi_params;
-        #}
+        
+        # unix socket
+        	fastcgi_pass   unix:/dev/shm/socket;
+	        fastcgi_index  index.php;
+	        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+	        include        fastcgi_params;
+        
+        }
 
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
