修改 supervisor 使用  inet_http

--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -17,12 +17,16 @@ childlogdir = /vue-msf/data/supervisor/log
 strip_ansi = false
 
 [supervisorctl]
-serverurl = unix:///vue-msf/data/supervisor/run/supervisord.sock
+#serverurl = unix:///vue-msf/data/supervisor/run/supervisord.sock
+serverurl = http://127.0.0.1:9001
 prompt = supervisor
 chmod = 0777
 
 [unix_http_server]
 file=/vue-msf/data/supervisor/run/supervisord.sock
+
+[inet_http_server]
+port=*:9001
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
