--- a/config/nginx/conf.d/adefault.conf
+++ b/config/nginx/conf.d/adefault.conf
@@ -1,51 +1,40 @@
 server {
-	listen   80; ## listen for ipv4; this line is default and implied
+        listen       80;
+        server_name  localhost;
+        root /vue-msf/data/www;
 
-	root /vue-msf/data/www;
-	index index.html index.htm index.php;
+        #charset koi8-r;
 
-	server_name localhost;
+        #access_log  logs/host.access.log  main;
 
-	location / {
-		# include /etc/nginx/naxsi.rules
-		if (!-e $request_filename) {
-			rewrite ^/(.*\.(gif|jpg|jpeg|png|bmp|ico|rar|css|js|zip|java|jar|txt|flv|swf|txt|wma)$) /$1 last;
-			rewrite ^(.*)$  /index.php?$1  last;
-		}
-	}
+        location / {
+            index  index.html index.php index.htm;
+        }
 
-	location /doc/ {
-		alias /usr/share/doc/;
-		autoindex on;
-		allow 127.0.0.1;
-		allow ::1;
-		deny all;
-	}
+        #error_page  404              /404.html;
 
+        # redirect server error pages to the static page /50x.html
+        #
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
 
-	#error_page 404 /404.html;
+        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+        #
+        location ~ \.php$ {
+        
+        #    fastcgi_pass   127.0.0.1:9000;
+        #    fastcgi_index  index.php;
+        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+        #    include        fastcgi_params;
+        
+        # 	unix socket
+        	fastcgi_pass   unix:/dev/shm/socket;
+	        fastcgi_index  index.php;
+	        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+	        include        fastcgi_params;
+        
+        }
 
-
-	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-	#
-	location ~ \.php$ {
-	#	fastcgi_split_path_info ^(.+\.php)(/.+)$;
-	#	# NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-	#
-	#	# With php5-cgi alone:
-		fastcgi_pass 127.0.0.1:9000;
-		fastcgi_index index.php;
-        	fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	#	# With php5-fpm:
-	#	fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
-	#	fastcgi_index index.php;
-		include fastcgi_params;
-	}
-
-	# deny access to .htaccess files, if Apache's document root
-	# concurs with nginx's one
-	#
-	location ~ /\.ht {
-		deny all;
-	}
-}
+    }
