--- a/config/nginx/conf/nginx.conf
+++ b/config/nginx/conf/nginx.conf
@@ -32,60 +32,6 @@ http {
 
     #gzip  on;
 
-    server {
-        listen       80;
-        server_name  localhost;
-        root /vue-msf/data/www;
-
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
-
-        location / {
-            index  index.php index.html index.htm;
-        }
-
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        
-        # unix socket
-        	fastcgi_pass   unix:/dev/shm/socket;
-	        fastcgi_index  index.php;
-	        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-	        include        fastcgi_params;
-        
-        }
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
-    }
-
-
     # another virtual host using mix of IP-, name-, and port-based configuration
     #
     #server {
@@ -120,5 +66,7 @@ http {
     #        index  index.html index.htm;
     #    }
     #}
+    
+    include /vue-msf/nginx/conf.d/*.conf;
 
 }
