--- a/config/php/etc/php-fpm.ini
+++ b/config/php/etc/php-fpm.ini
@@ -24,7 +24,7 @@ unserialize_callback_func =
 serialize_precision = 17
 open_basedir = /vue-msf/data/www:/tmp/
 disable_classes =
-disable_functions = exec,shell_exec,system,popen,escapeshellcmd,escapeshellarg,proc_open,proc_get_status,show_source,gzinflate,passthru
+#disable_functions = exec,shell_exec,system,popen,escapeshellcmd,escapeshellarg,proc_open,proc_get_status,show_source,gzinflate,passthru
 ignore_user_abort = Off
 realpath_cache_size = 16k
 realpath_cache_ttl = 120
