设置php-fpm 默认启动

--- a/config/supervisor/conf.d/php-fpm.conf
+++ b/config/supervisor/conf.d/php-fpm.conf
@@ -5,8 +5,8 @@ numprocs=1
 directory=/vue-msf/php/
 umask=022
 priority=999
-autostart=false
-autorestart=false
+autostart=true
+autorestart=true
 startsecs=10
 startretries=2
 exitcodes=0,2
