--- a/config/nginx/conf.d/apidoc.conf
+++ b/config/nginx/conf.d/apidoc.conf
@@ -1,12 +1,12 @@
-#server {
-#    listen       80;
-#    server_name  api.com;
+server {
+    listen       80;
+    server_name  api.com;
 
 #    access_log  /vue-msf/data/nginx/logs/localhost.access.log  main;
 #    error_log   /vue-msf/data/nginx/logs/localhost.error.log;
 
-#    root   /vue-msf/data/www/php-msf/vendor/pinguo/php-msf/api/;
-#    index  index.html index.htm index.php;
+    root   /vue-msf/data/www/apidocDemo/doc/;
+    index  index.html index.htm index.php;
 
 #    location ~ /\.git/ {
 #        return 404;
@@ -26,4 +26,4 @@
 #        log_not_found off;
 #        access_log off;
 #    }
-#}
+}
