--- a/config/redis/conf/redis-master-6379.conf
+++ b/config/redis/conf/redis-master-6379.conf
@@ -280,8 +280,8 @@ slave-priority 100
 # limit for maxmemory so that there is some free RAM on the system for slave
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
-#maxmemory 4gb
-maxmemory 20mb
+maxmemory 4gb
+#maxmemory 20mb
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached? You can select among five behavior:
