--- a/config/supervisor/supervisord.conf
+++ b/config/supervisor/supervisord.conf
@@ -4,7 +4,7 @@ logfile_maxbytes = 50MB
 logfile_backups=10
 loglevel = info
 pidfile = /vue-msf/data/supervisor/run/supervisord.pid
-nodaemon = fasle
+nodaemon = false
 minfds = 1024
 minprocs = 200
 umask = 022
