track_errors = Off

--- a/config/php/etc/php-cli.ini
+++ b/config/php/etc/php-cli.ini
@@ -61,7 +61,7 @@ ignore_repeated_errors = Off
 ignore_repeated_source = Off
 report_memleaks = On
 report_zend_debug = Off
-track_errors = On
+track_errors = Off
 html_errors = Off
 error_log = /vue-msf/data/php/log/php_errors.log
 
