add skywalking extension ,del magento extensions

--- a/config/php/etc/php.d/skywalking.ini
+++ b/config/php/etc/php.d/skywalking.ini
@@ -4,6 +4,7 @@ skywalking.enable = 1
 ; Set skyWalking collector version (5 or 6 or 7 or 8)
 ; skywalking服务一般是skywalking8+elasticsearch7
 skywalking.version = 8
-skywalking.app_code = app-business  # 根据自己的情况调整
-; Set grpc address
-skywalking.grpc=10.100.3.161:11800 # 根据自己的skywalking服务调整
+; change your app code 
+skywalking.app_code = app-business
+; Set grpc address  skywalking  service address 
+skywalking.grpc=10.100.3.161:11800
