--- a/config/php/etc/php.d/skywalking.ini
+++ b/config/php/etc/php.d/skywalking.ini
@@ -1,10 +1,9 @@
-extension=skywalking
 [skywalking]
+extension=skywalking.so
+skywalking.app_code = hello_skywalking
 skywalking.enable = 1
-; Set skyWalking collector version (5 or 6 or 7 or 8)
-; skywalking服务一般是skywalking8+elasticsearch7
 skywalking.version = 8
-; change your app code 
-skywalking.app_code = app-business
-; Set grpc address  skywalking  service address 
-skywalking.grpc=10.100.3.161:11800
+skywalking.grpc = 10.100.3.161:11800
+skywalking.error_handler_enable = 0
+skywalking.sample_n_per_3_secs = -1
+skywalking.instance_name = ""
