--- a/Dockerfile-GRPC
+++ b/Dockerfile-GRPC
@@ -6,24 +6,39 @@ ENV HOME /vue-msf
 ENV SRC_DIR $HOME/src
 RUN mkdir -p ${SRC_DIR}
 
-RUN cd ${SRC_DIR} \ 
-	&& yum install -y git \
-    && git clone --depth 1 -b v1.34.x https://github.com/grpc/grpc.git ./grpc \
-	&& cd /vue-msf/src/grpc \
-    && git submodule update --init --recursive 
-
-
 RUN yum install -y  \
 	automake autoconf \
 	openssl openssl-devel \
-	cmake make  gcc gcc-c++ kernel-devel  libtool pkg-config  diffutils
+	cmake make  gcc gcc-c++ kernel-devel  libtool pkg-config  diffutils git
 
 
+RUN cd ${SRC_DIR} \ 
+    && git clone --depth 1 -b v1.40.0 https://github.com/grpc/grpc.git ./grpc \
+	&& cd /vue-msf/src/grpc \
+    && git submodule update --init --recursive 
 
 
 # -----------------------------------------------------------------------------
 # Install grpc 
 # ----------------------------------------------------------------------------- 
+
+
+RUN cd /vue-msf/src/grpc/third_party/cares/cares \
+    && mkdir -p /vue-msf/local/ \
+    # && git submodule update --init --recursive \
+    # && git fetch origin \/
+    # && git checkout cares-1_13_0 \
+    # && mkdir -p cmake/build \
+    # && cd cmake/build \
+    # && cmake -DCMAKE_BUILD_TYPE=Release ../.. -DCMAKE_INSTALL_PREFIX=/vue-msf/local/ \
+    && autoreconf --install \
+    && ./configure "CFLAGS=-fPIC" "CXXFLAGS=-fPIC" --prefix=/vue-msf/local/ \
+    && make \
+    && make install \
+    # && cd ../../../../.. \
+    # && rm -rf third_party/cares/cares 
+    && ldconfig 
+
 ENV GRPCVERSION 1.34.2
 RUN cd ${SRC_DIR} \ 
     # && git clone --depth 1 -b v1.34.x https://github.com/grpc/grpc.git ./grpc \
@@ -40,13 +55,14 @@ RUN cd ${SRC_DIR} \
     && make install  \
     && ldconfig 
 
+
 RUN cd /vue-msf/src/grpc \
     # && git submodule update --init --recursive \
     && mkdir -p cmake/build \
     && cd cmake/build \
     # && cmake ../.. -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DgRPC_INSTALL=ON -DCMAKE_INSTALL_PREFIX=/vue-msf/local/ \
     # && cmake ../.. -DgRPC_INSTALL=ON -DgRPC_BUILD_TESTS=OFF -DgRPC_PROTOBUF_PROVIDER=package -DgRPC_ZLIB_PROVIDER=package  -DgRPC_SSL_PROVIDER=package -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/vue-msf/local/ \
-    && cmake ../.. -DgRPC_INSTALL=ON -DgRPC_BUILD_TESTS=OFF -DgRPC_PROTOBUF_PROVIDER=package -DgRPC_ZLIB_PROVIDER=package  -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/vue-msf/local/ \
+    && cmake ../.. -DgRPC_INSTALL=ON -DgRPC_BUILD_TESTS=OFF -DgRPC_PROTOBUF_PROVIDER=package -DgRPC_CARES_PROVIDER=package  -DgRPC_ZLIB_PROVIDER=package  -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/vue-msf/local/ \
     && make \
     && make install \
     && ldconfig 
