--- a/config/php/etc/php.d/skywalking.ini
+++ b/config/php/etc/php.d/skywalking.ini
@@ -3,7 +3,7 @@ extension=skywalking.so
 skywalking.app_code = hello_skywalking
 skywalking.enable = 1
 skywalking.version = 9
-skywalking.grpc = 113.200.75.14:11800
+skywalking.grpc_address = 113.200.75.14:11800
 skywalking.error_handler_enable = 0
 skywalking.sample_n_per_3_secs = -1
 skywalking.instance_name = ""
