--- a/config/php/etc/php.d/skywalking.ini
+++ b/config/php/etc/php.d/skywalking.ini
@@ -1,9 +1,23 @@
 [skywalking]
-extension=skywalking.so
-skywalking.app_code = hello_skywalking
-skywalking.enable = 1
-skywalking.version = 9
-skywalking.grpc_address = 113.200.75.14:11800
-skywalking.error_handler_enable = 0
-skywalking.sample_n_per_3_secs = -1
-skywalking.instance_name = ""
+extension=skywalking_agent.so
+
+# Enable skywalking extension or not.
+skywalking_agent.enable = On
+
+# Log file path.
+skywalking_agent.log_file = /tmp/skywalking_agent.log
+
+# Log level: one of `OFF`, `TRACE`, `DEBUG`, `INFO`, `WARN`, `ERROR`.
+skywalking_agent.log_level = INFO
+
+# Address of skywalking oap server.
+skywalking_agent.server_addr = http://113.200.75.14:11800
+
+# Application service name.
+skywalking_agent.service_name = hello_skywalking
+
+# Skywalking version.
+skywalking_agent.skywalking_version = 9
+
+# Skywalking worker threads, 0 will auto set as the cpu core size.
+# skywalking_agent.worker_threads = 3
