rabbitmq-c 0.13.0 , skywalking_agent 0.3.0

--- a/config/php/etc/php.d/skywalking.ini
+++ b/config/php/etc/php.d/skywalking.ini
@@ -5,13 +5,13 @@ extension=skywalking_agent.so
 skywalking_agent.enable = On
 
 # Log file path.
-skywalking_agent.log_file = /tmp/skywalking_agent.log
+# skywalking_agent.log_file = /tmp/skywalking_agent.log
 
 # Log level: one of `OFF`, `TRACE`, `DEBUG`, `INFO`, `WARN`, `ERROR`.
-skywalking_agent.log_level = INFO
+skywalking_agent.log_level = OFF
 
 # Address of skywalking oap server.
-skywalking_agent.server_addr = http://113.200.75.14:11800
+skywalking_agent.server_addr = 113.200.75.14:11800
 
 # Application service name.
 skywalking_agent.service_name = hello_skywalking
