edit skywalking agent

--- a/config/php/etc/php.d/skywalking.ini
+++ b/config/php/etc/php.d/skywalking.ini
@@ -1,23 +1,23 @@
-[skywalking]
-extension=skywalking_agent.so
+;[skywalking]
+;extension=skywalking_agent.so
 
 # Enable skywalking extension or not.
-skywalking_agent.enable = On
+;skywalking_agent.enable = On
 
 # Log file path.
 # skywalking_agent.log_file = /tmp/skywalking_agent.log
 
 # Log level: one of `OFF`, `TRACE`, `DEBUG`, `INFO`, `WARN`, `ERROR`.
-skywalking_agent.log_level = OFF
+;skywalking_agent.log_level = OFF
 
 # Address of skywalking oap server.
-skywalking_agent.server_addr = 113.200.75.14:11800
+;skywalking_agent.server_addr = 113.200.75.14:11800
 
 # Application service name.
-skywalking_agent.service_name = hello_skywalking
+;skywalking_agent.service_name = hello_skywalking
 
 # Skywalking version.
-skywalking_agent.skywalking_version = 9
+;skywalking_agent.skywalking_version = 9
 
 # Skywalking worker threads, 0 will auto set as the cpu core size.
 # skywalking_agent.worker_threads = 3
