--- a/config/php/etc/php-cli.ini
+++ b/config/php/etc/php-cli.ini
@@ -270,11 +270,11 @@ ldap.max_links = -1
 
 [opcache]
 
-zend_extension=opcache.so
+zend_extension=/vue-msf/php/lib/php/extensions/no-debug-non-zts-20090626/opcache.so
 opcache.enable = 1
 opcache.enable_cli = 1
-opcache.memory_consumption = 64
-opcache.interned_strings_buffer = 4
+opcache.memory_consumption = 2048
+; opcache.interned_strings_buffer = 4
 opcache.max_accelerated_files = 100000
 opcache.max_wasted_percentage = 5
 opcache.use_cwd = 1
@@ -283,8 +283,8 @@ opcache.revalidate_freq= 10
 opcache.revalidate_path = 0
 opcache.save_comments = 1
 opcache.load_comments = 1
-pcache.fast_shutdown = 0
-opcache.enable_file_override = 1
+opcache.fast_shutdown = 1
+opcache.enable_file_override = 0
 opcache.optimization_level = 0xffffffff
 opcache.inherited_hack = 1
 opcache.dups_fix = 0
@@ -294,3 +294,9 @@ opcache.consistency_checks = 0
 opcache.error_log = /vue-msf/data/php/log/opcache_errors.log
 opcache.log_verbosity_level = 1
 opcache.protect_memory = 0
+opcache.file_update_protection = 2 
+opcache.force_restart_timeout = 180 
+opcache.preferred_memory_model =
+opcache.restrict_api = 
+opcache.validate_permission = Off
+opcache.validate_root = Off 
