--- a/config/php/etc/php-fpm.conf
+++ b/config/php/etc/php-fpm.conf
@@ -55,6 +55,6 @@ request_terminate_timeout=10s
 rlimit_files = 16384
 rlimit_core = 0
 catch_workers_output = yes
-clear_env = yes
+;clear_env = yes
 security.limit_extensions = .php
 env[environ] = docker
